# pico-sdk

src/common/: CMakeLists.txt
src/common/pico_blockdev/: CMakeLists.txt  blockdev.c  partition.c
src/common/pico_blockdev/include/pico/: blockdev.h
src/common/pico_vfs/: CMakeLists.txt  vfs.c
src/common/pico_vfs/include/pico/: vfs.h
src/common/pico_vfs/include/sys/: dirent.h
src/host/: CMakeLists.txt
src/host/hardware_flash/: CMakeLists.txt  flash.c
src/host/hardware_flash/include/hardware/: flash.h
src/host/hardware_gpio/: gpio.c
src/host/hardware_gpio/include/hardware/: gpio.h
src/host/hardware_i2c/: CMakeLists.txt  i2c.c
src/host/hardware_i2c/include/hardware/: i2c.h
src/host/hardware_spi/: spi.c
src/host/hardware_spi/include/hardware/: spi.h
src/rp2_common/: CMakeLists.txt
src/rp2_common/pico_blockdev/: CMakeLists.txt  blockdev.c
src/rp2_common/pico_blockdev/include/pico/: blockdev.h
src/rp2_common/pico_stdio/: CMakeLists.txt  stdio.c
src/rp2_common/pico_vfs/: vfs.c
src/rp2_common/pico_vfs/include/pico/: vfs.h
