option(PICO_BLOCKDEV "Globablly enable block device support " 1)

if (NOT TARGET pico_blockdev)
    pico_add_impl_library(pico_blockdev)

    function(pico_enable_blockdev TARGET ENABLED)
        set_target_properties(${TARGET} PROPERTIES PICO_TARGET_VFS ${ENABLED})
    endfunction()
    
    target_sources(pico_blockdev INTERFACE
        ${CMAKE_CURRENT_LIST_DIR}/blockdev.c
    )
    
    target_include_directories(pico_blockdev INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
endif()
